files/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-nginx
#  labels:
#    app: nginx-f
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-f
  template:
    metadata:
      labels:
        app: nginx-f
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-html
        configMap:
          name: nginx-html
