files/svc-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-backend
spec:
  selector:
    app: multi-b
  ports:
    - name: multitool
      protocol: TCP
      port: 8080
      targetPort: 8090
  type: ClusterIP
