files/svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-frontend
spec:
  selector:
    app: nginx-f
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
